2003-04-24  Frank Warmerdam  <warmerdam@pobox.com>

	* port/cpl_multiproc.cpp: Implement pthreads based mutex, and thread
	support.  Added configure option (--with-threads) in configure.

2003-04-22  Andrey Kiselev  <dron@remotesensing.org>
	
	* apps/gdalinfo.c: New switches: -nogcp and -nomd to suppress
	printing out GCPs list and metadata strings respectively.

2003-03-18  Frank Warmerdam  <warmerdam@pobox.com>

	* gdal/frmts/raw/rawdataset: Implemented FlushCache() method on 
	the RawRasterBand() that will use VSIFFlush() to sync things to disk.

	* gdal/core/gdal_priv.h: made GDALRasterBand::FlushCache() method
	virtual.  Added C/Python access to GDALDataset::FlushCache(). 

2003-03-05  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/swq, etc: Implemented JOIN support in the generic ExecuteSQL()
	processor. 

	* ogr/ogrsf_frmts/generic/ogr_miattrindc.cpp: 
	Implemented support for generic ogr attribute indexes and the ability
	to accelerate simple WHERE clauses using the attribute index.  Applied
	only to Shape driver so far. 

2003-02-26  Frank Warmerdam  <warmerdam@pobox.com>

	* configure/aclocal.m4: added --without-ld-shared configure switch
	to disable shared library support. 

2003-02-21  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/hfa/{hfaopen.cpp, hfatype.cpp, hfaband.cpp, hfa_p.h}:
	Added support for writing large (>4 GB) Erdas Imagine files.

2003-02-19  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/raw/effdataset.cpp: Removed. FAST driver now should work
	for most part of FAST datasets.

2003-02-18  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/raw/envidataset.cpp: Write support via Create() method
	added.

2003-02-15  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/pymod/samples/val_repl.py: Created directory for storing Python
	sample scripts along with the first sample.

2003-02-13  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/aigrid/giodataset.cpp: discarded Create() method, and 