@@ -1,3 +1,8 @@
+2003-05-05  Simon Perkins  <s.perkins@lanl.gov>
+
+	* frmts/fits/fitsdataset.cpp: Removed dodgy "value type guessing"
+	code from FITS metadata write routine.
+
 2003-04-24  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* port/cpl_multiproc.cpp: Implement pthreads based mutex, and thread
